# rust4Windows

./: Cargo.toml
src/: SekiroCoin.py  main.rs
