[package]
name = "rust4Windows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
 
    "Win32_System_Com",
   
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus"
]